je suis trop con

--- a/iss.html
+++ b/iss.html
@@ -1,1 +1,35 @@
-test2
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta lang="fr">
+    <title>ISS Tracker</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="js/ISS_position.js"></script>
+</head>
+
+<body>
+    <p>
+        <h1>Position de l'ISS</h1>
+        <button type="button" onclick="Position()">Actualise</button>
+        <h2>latitude :</h2>
+        <div id="ISS_latitude">
+            ...
+        </div>
+        <h2>longitude :</h2>
+        <div id="ISS_longitude">
+            ...
+
+        </div>
+
+        <h1>Occupants de l'ISS</h1>
+        <button type="button" onclick="People()">Actualise</button>
+        <div id="ISS_people">
+           
+            ...
+        </div>
+        
+    </p>
+</body>
+</html>
