tableau avec les données + incorporation de bootstrap

--- a/iss.html
+++ b/iss.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta lang="fr">
     <title>ISS Tracker</title>
     <style>
@@ -10,51 +13,132 @@
             width: 100%;
         }
     </style>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom Google Web Font -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link
+        href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
+        rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom CSS-->
+    <link href="css/general.css" rel="stylesheet">
+
+    <!-- Owl-Carousel -->
+    <link href="css/custom.css" rel="stylesheet">
+    <link href="css/owl.carousel.css" rel="stylesheet">
+    <link href="css/owl.theme.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
+
+    <!-- Magnific Popup core CSS file -->
+    <link rel="stylesheet" href="css/magnific-popup.css">
+
+    <script src="js/modernizr-2.8.3.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
     <script src="js/ISS.js"></script>
     <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7e99wsXeaEulKkMOuF9_atHJV7WfD-gQ&callback=position">
-            </script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7e99wsXeaEulKkMOuF9_atHJV7WfD-gQ&callback=position">
+        </script>
 </head>
 
 <body>
-    <p>
-        <h1>Position de l'ISS</h1>
-        <button type="button" onclick="position()">Actualise</button>
-        <h2>latitude :</h2>
-        <div id="ISS_latitude">
-            ...
-        </div>
-        <h2>longitude :</h2>
-        <div id="ISS_longitude">
-            ...
 
+
+    <nav class="navbar navbar-inverse fixed-top">
+        <a class="navbar-brand" href="index.html"><img src="img/icon/home.png" alt=""></a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse" style="padding:15px">
+            <ul class="navbar-nav">
+                <li class="nav-item" style="margin:10px">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item " style="margin:10px">
+                    <a class="nav-link" href="gallery.html">Galerie</a>
+                </li>
+                <li class="nav-item active " style="margin:10px">
+                    <a class="nav-link disabled" href="iss.html">ISS</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="row" style="margin:20px; padding:15px">
+        <div class="col-sm-4">
+
+            <table class="table table-bordered table-striped">
+                <tbody>
+                    <tr>
+                        <td>Latitude :</td>
+                        <td>
+                            <div id="ISS_latitude"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Longitude :</td>
+                        <td>
+                            <div id="ISS_longitude"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Nombre de personne à bord :</td>
+                        <td>
+                            <div id="ISS_people"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>#1</a></td>
+                        <td>
+                            <div id="people_0"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>#2</a></td>
+                        <td>
+                            <div id="people_1"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>#3</a></td>
+                        <td>
+                            <div id="people_2"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>#4</a></td>
+                        <td>
+                            <div id="people_3"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>#5</a></td>
+                        <td>
+                            <div id="people_4"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>#6</a></td>
+                        <td>
+                            <div id="people_5"></div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <button type="button" class="btn btn-success" onclick="position()">Actualiser</button>
         </div>
 
-        <h1>Occupants de l'ISS</h1>
-        <div id="ISS_people">
-           
-            ...
-        </div>
-        <!-- <div>
-            Il y a :
-            <div id="people_0"></div>
-            <div id="people_1"></div>
-            <div id="people_2"></div>
-            <div id="people_3"></div>
-            <div id="people_4"></div>
-            <div id="people_5"></div>
-        </div> -->
-    </p>
-    <p>
-        <div id="map"></div>
         
 
+        <div class="col-sm-8">
+            <div id="map"></div>
+        </div>
+    </div>
 
 
-
-
-
-    </p>
 </body>
+
 </html>
