--- a/iss.html
+++ b/iss.html
@@ -9,7 +9,7 @@
     <title>ISS Tracker</title>
     <style>
         #map {
-            height: 400px;
+            height: 500px;
             width: 100%;
         }
     </style>
@@ -67,9 +67,13 @@
     </nav>
 
     <div class="row" style="margin:20px; padding:15px">
+        <div class="container .text-center" style="margin-bottom:10px">
+            <h2>International Space Station</h2>
+        </div>
         <div class="col-sm-4">
 
-            <table class="table table-bordered table-striped">
+
+            <table class="table table-bordered table-striped ">
                 <tbody>
                     <tr>
                         <td>Latitude :</td>
@@ -131,10 +135,10 @@
             <button type="button" class="btn btn-success" onclick="position()">Actualiser</button>
         </div>
 
-        
 
         <div class="col-sm-8">
             <div id="map"></div>
+
         </div>
     </div>
 
