--- a/gallery.html
+++ b/gallery.html
@@ -130,126 +130,126 @@
                     name = "Antoine CALDEIRA";
                     spe = "Etudiant ECAM5 IOC";
                     more = "Artiste incompris<br>Beaucoup trop de cheveux";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    contact = "antoine.caldeira@ecam-rennes.com"
                     break;
                 case 3:
                     pic = "img/trombi/image003.jpg";
                     name = "Antoine FOREST";
                     spe = "Etudiant ECAM5 IOC";
                     more = "\"Assurément quelqu'un sur qui on peut compter\"<br>- Winston Churchill";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    contact = "antoine.forest@ecam-rennes.com"
                     break;
                 case 4:
                     pic = "img/trombi/image004.jpg";
                     name = "Mathieu GOULEAU";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Rugbyman le jour, business man la nuit";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Rugbyman le jour, business man la nuit<br>A participé à la nuit de l'Info 2019";
+                    contact = "mathieu.gouleau@ecam-rennes.com"
                     break;
                 case 5:
                     pic = "img/trombi/image005.jpg";
                     name = "Alexandre GRANDIN";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Requin de la finance<br>A participé à la nuit de l'Info 2019";
+                    contact = "alexandre.grandin@ecam-rennes.com"
                     break;
                 case 6:
                     pic = "img/trombi/image006.jpg";
                     name = "Paul JANSEN";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Lead Dev de la promo 2020<br>A participé à la nuit de l'Info 2019";
+                    contact = "paul.jansen@ecam-rennes.com"
                     break;
                 case 7:
                     pic = "img/trombi/image007.jpg";
                     name = "Florent LE CHANU";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Regardez ce revers !";
+                    contact = "florent.le-chanu@ecam-rennes.com"
                     break;
                 case 8:
                     pic = "img/trombi/image008.jpg";
                     name = "Cecile LEROUGE";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "N'aime pas l'informatique<br>N'aime pas grand chose, en fait ...";
+                    contact = "cecile.lerouge@ecam-rennes.com"
                     break;
                 case 9:
                     pic = "img/trombi/image009.jpg";
                     name = "Pauline LOUAPRE";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Meilleure batteuse de l'ECAM<br>A participé à la nuit de l'Info 2019";
+                    contact = "pauline.louapre@ecam-rennes.com"
                     break;
                 case 10:
                     pic = "img/trombi/image010.jpg";
                     name = "Thomas MENARD";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Pretendant au titre de major de promo<br>A participé à la nuit de l'Info 2019";
+                    contact = "thomas.menard@ecam-rennes.com"
                     break;
                 case 11:
                     pic = "img/trombi/image011.jpg";
                     name = "Thibault NGUYEN";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Appariteur, sauf les jours qui finissent en i";
+                    contact = "thibault.nguyen@ecam-rennes.com"
                     break;
                 case 12:
                     pic = "img/trombi/image013.jpg";
                     name = "Lily ROUSSEL";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Addicte au café depuis peu<br>A participé à la nuit de l'Info 2019";
+                    contact = "lily.roussel@ecam-rennes.com"
                     break;
                 case 13:
                     pic = "img/trombi/image014.jpg";
                     name = "Julien VANHOUTTE";
                     spe = "Etudiant ECAM5 IOC";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "Veut vivre dans un sous-marin";
+                    contact = "julien.vanhoutte@ecam-rennes.com"
                     break;
                 case 14:
                     pic = "img/trombi/image015.jpg";
                     name = "Eden BRIEND";
                     spe = "Bi-diplôme ECAM/IGR";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "\"On aime pas trop les IGR dans le coin ...\"<br>- Etudiant Info après quelques verres de trop";
+                    contact = "eden.briend@ecam-rennes.com"
                     break;
                 case 15:
                     pic = "img/trombi/image016.jpg";
                     name = "Maxime CHAIGNEAU";
                     spe = "Bi-diplôme ECAM/IGR";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "\"On aime pas trop les IGR dans le coin ...\"<br>- Etudiant Info après quelques verres de trop<br>A participé à la nuit de l'Info 2019";
+                    contact = "maxime.chaigneau@ecam-rennes.com"
                     break;
                 case 16:
                     pic = "img/trombi/image017.jpg";
                     name = "Clément CHAPLAIN";
                     spe = "Bi-diplôme ECAM/IGR";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "\"On aime pas trop les IGR dans le coin ...\"<br>- Etudiant Info après quelques verres de trop<br>A participé à la nuit de l'Info 2019";
+                    contact = "clement.chaplain@ecam-rennes.com"
                     break;
                 case 17:
                     pic = "img/trombi/image018.jpg";
                     name = "Léa CONAN";
                     spe = "Bi-diplôme ECAM/IGR";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "\"On aime pas trop les IGR dans le coin ...\"<br>- Etudiant Info après quelques verres de trop<br>A participé à la nuit de l'Info 2019";
+                    contact = "lea.conan@ecam-rennes.com"
                     break;
                 case 18:
                     pic = "img/trombi/image019.jpg";
                     name = "Raissa KASOKI";
                     spe = "Bi-diplôme ECAM/IGR";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "\"On aime pas trop les IGR dans le coin ...\"<br>- Etudiant Info après quelques verres de trop";
+                    contact = "reine-raissa.kasoki-talyamwanya@ecam-rennes.com"
                     break;
                 case 19:
                     pic = "img/trombi/image020.jpg";
                     name = "Pauline RUBIN";
                     spe = "Bi-diplôme ECAM/IGR";
-                    more = "Champion de judo et de programmation<br>A participé à la nuit de l'Info 2019";
-                    contact = "remi.bordet@ecam-rennes.com"
+                    more = "\"On aime pas trop les IGR dans le coin ...\"<br>- Etudiant Info après quelques verres de trop<br>A participé à la nuit de l'Info 2019";
+                    contact = "pauline.rubin@ecam-rennes.com"
                     break;
                 default:
                     break;
