--- a/gallery.html
+++ b/gallery.html
@@ -108,7 +108,7 @@
 
         <!--Partie affichage de l'image-->
         <div class="col-sm-4">
-            <img id="profilepic" width="100%">
+            <img id="profilepic" width="100%" class="animated slideInUp">
         </div>
 
         <div class="col-sm-4" id="infos"></div>
