--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="row">
 
                 <div class="col-sm-4 wow fadeInDown text-center">
-                    <a href="https://www.facebook.com/EcamRennesLouisDeBroglie/">
+                    <a href="https://www.facebook.com/EcamRennesLouisDeBroglie/" target="_blank">
                         <img class="rotate" src="img/icon/facebook.png" alt="Generic placeholder image">
                     </a>
                     <h3>Follow Us</h3>
