--- a/iss.html
+++ b/iss.html
@@ -9,7 +9,7 @@
     <title>ISS Tracker</title>
     <style>
         #map {
-            height: 500px;
+            height: 300px;
             width: 100%;
         }
     </style>
@@ -138,6 +138,16 @@
 
         <div class="col-sm-8">
             <div id="map"></div>
+            <table class="table table-bordered table-striped ">
+                <tbody>
+                    <tr>
+                        <td>Informations du pays survolé:</td>
+                        <td>
+                            <div id="ISS_info">pas d'information pertinantes</div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
         </div>
     </div>
