nouvelle api (vitesse et altitude)

--- a/iss.html
+++ b/iss.html
@@ -89,6 +89,18 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>Altitude :</td>
+                        <td>
+                            <div id="ISS_altitude"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Vitesse :</td>
+                        <td>
+                            <div id="ISS_vitesse"></div>
+                        </td>
+                    </tr>
+                    <tr>
                         <td>Nombre de personne à bord :</td>
                         <td>
                             <div id="ISS_people"></div>
